--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ table {
     <tr>
         
     <td>TANGGAL LAHIR</td>
-    <td><input type="date" id="tanggal lahir name "tanggal lahir"></td>
+    <td><input type="date" id="tanggal lahir name"=:"tanggal lahir"></td>
 
   </tr>
     <tr>
@@ -90,9 +90,11 @@ table {
     <td><input type="text" name="nama" placeholder="NO.TELP"></td>
 
   </tr>
+
   
 </table>
 </form>
+  <a href="formdaftar.html"><h1>NEXT</h1></a>
 </center>
 
   
