--- a/formdaftar.html
+++ b/formdaftar.html
@@ -42,7 +42,8 @@ table {
 <body>
 <center>
    <form>
- 
+  <form action="https://drive.google.com/drive/folders/171Aztp2pjunAcj8WW0jpzRfbp_mwxNeS" method="POST">
+        <input type="submit" value="Kirim">
 <table border="0"> 
   <tr>
     
@@ -124,8 +125,12 @@ table {
       </td>
     
     </tr>
+   
+
+  </form>
 </table>
 </form>
+  <a href="index.html"><h1>BACK</h1></a>
 </center>
 
   
